HDX-7041 - [responsive] org detail page          - fix all links not redirecting to light org page          - responsive org logo          - align org logo right for tablet

--- a/ckanext-hdx_theme/ckanext/hdx_theme/hdx-styles/src/common/less/light/organization/org-light.less
+++ b/ckanext-hdx_theme/ckanext/hdx_theme/hdx-styles/src/common/less/light/organization/org-light.less
@@ -7,5 +7,12 @@
   }
   .org-logo-large {
     margin-top: 20px; //title is aligned with the logo
+    width: 100%;
+    padding-right: 15px;
+    text-align: right;
+
+    img {
+      max-width: 100%;
+    }
   }
 }
